--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
     <h1 class="center-align">
       Contacts List
     </h1>
+    <ul class="collection with-header" id="names">
+      <li class="collection-header">
+        <h5>A</h5>
+      </li>
+      <li class="collection-item"><a href="#">Amania</a></li>
+      <li class="collection-item"><a href="#">Akash</a></li>
+      <li class="collection-item"><a href="#">Adam</a></li>
+
+      <li class="collection-header">
+        <h5>B</h5>
+      </li>
+      <li class="collection-item"><a href="#">Brandon</a></li>
+      <li class="collection-item"><a href="#">Brad</a></li>
+      <li class="collection-item"><a href="#">Baldev</a></li>
+      <li class="collection-item"><a href="#">Balmer</a></li>
+
+      <li class="collection-header">
+        <h5>C</h5>
+      </li>
+      <li class="collection-item"><a href="#">Cendy</a></li>
+      <li class="collection-item"><a href="#">Claudia</a></li>
+      <li class="collection-item"><a href="#">Cerny</a></li>
+    </ul>
   </div>
 </body>
 </html>
