--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1 class="center-align">
       Contacts List
     </h1>
+    <input type="text" id="filterInput" placeholder="Search names...">
     <ul class="collection with-header" id="names">
       <li class="collection-header">
         <h5>A</h5>
