--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
       //get value entered by the user
       let filterValue = document.getElementById('filterInput').value.toUpperCase();
       console.log(filterValue);
+      //get ul
+      let ul = document.getElementById('names');
+      //get lis
+      let li = ul.querySelectorAll('li.collection-item');
+
+      //loop through the collection of lis
+      for(let i=0; i<li.length;i++){
+        let a = li[i].getElementsByTagName('a')[0];
+
+        //check if index matches with the index of the current name in the loop
+        if(a.innerHTML.toUpperCase().indexOf(filterValue) > -1) {
+           li[i].style.display = '';
+        } else {
+          li[i].style.display = 'none';
+        }
+      }
     }
   </script>
 </body>
